# autohr

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
.spec-workflow/specs/resume-screening/: design.md  requirements.md  tasks.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_schema.py  a3b7c5d9e1f2_0003_email_config_backoff.py  b8d2e6f4a3c1_0004_audit_log_user_agent.py  c4e8f2a1b9d3_0005_llm_config.py  f1c9ddd82875_0002_team_invites.py
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py  crypto.py  mineru_parser.py  parser_base.py  storage.py
backend/app/adapters/llm/: __init__.py  _json.py  base.py  mock.py  qwen.py  router.py  zhipu.py
backend/app/api/: __init__.py  admin.py  audit_logs.py  auth.py  candidates.py  dashboard.py  email_configs.py  exports.py  interview.py  job_candidates.py  jobs.py  platform_imports.py  reasons.py  resumes.py  scores.py  screening.py  teams.py  uploads.py
backend/app/core/: __init__.py  config.py  db.py  deps.py  logging.py  security.py
backend/app/core/middleware/: __init__.py  audit.py  error_handler.py  request_id.py
backend/app/models/: __init__.py  async_job.py  audit.py  base.py  candidate.py  dedup.py  email_config.py  interview.py  invite.py  job.py  llm_call.py  llm_config.py  score.py  screening.py  team.py  types.py  user.py
backend/app/schemas/: __init__.py  admin.py  audit.py  auth.py  candidate_detail.py  candidate_list.py  candidate_structure.py  dedup.py  email.py  export.py  interview.py  job.py  platform.py  reason.py  score.py  screening.py  team.py  upload.py
backend/app/services/: __init__.py  admin.py  async_job_service.py  audit_log.py  auth_service.py  candidate_detail.py  candidate_list.py  dedup.py  email_config_service.py  export.py  extractor.py  filter.py  interview.py  job_service.py  reasoning.py  scorer.py  screening_orchestrator.py  team_service.py
backend/app/services/ingestion/: __init__.py  email_fetcher.py  file_upload.py  platform_import.py
backend/app/services/parser/: __init__.py  docx_parser.py  ocr.py  pdf_parser.py  service.py
backend/app/workers/: __init__.py  celery_app.py  extractor_task.py  parser_task.py  scheduler.py  scorer_task.py  tasks.py
backend/tests/: __init__.py  conftest.py
backend/tests/adapters/: __init__.py  test_crypto.py  test_json.py  test_mock.py  test_router.py  test_storage.py
backend/tests/api/: __init__.py  test_admin.py  test_audit_logs.py  test_auth.py  test_candidate_detail.py  test_candidates.py  test_email_configs.py  test_exports.py  test_interview.py  test_job_candidates.py  test_jobs.py  test_platform_imports.py  test_reasons.py  test_scores.py  test_screening.py  test_screening_pipeline.py  test_teams.py  test_uploads.py
backend/tests/core/: __init__.py  test_logging.py  test_security.py
backend/tests/models/: __init__.py  test_encrypted_string.py  test_models.py
backend/tests/services/: __init__.py  test_async_job_service.py  test_audit_log.py  test_auth_service.py  test_dedup.py  test_export.py  test_extractor.py  test_filter.py  test_interview.py  test_job_service.py  test_reasoning.py  test_scorer.py  test_screening_orchestrator.py  test_team_service.py
backend/tests/services/ingestion/: __init__.py  test_email_fetcher.py  test_file_upload.py  test_platform_import.py
backend/tests/services/parser/: __init__.py  test_parser_service.py
backend/tests/workers/: test_async_task.py  test_extractor_task.py  test_parser_task.py  test_reasoning_integration.py  test_scorer_task.py
frontend/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/accept-invite/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/uploads/: page.tsx
frontend/components/: ActivityLog.tsx  AppNav.tsx  CandidateFilters.tsx  CandidateTable.tsx  EmptyState.tsx  ExportButton.tsx  InterviewQuestions.tsx  JobForm.tsx  OverrideDialog.tsx  ReasonsList.tsx  ResumePreview.tsx  ScoreBreakdown.tsx  StructuredFields.tsx  UploadDropzone.tsx  UploadProgressList.tsx  providers.tsx
frontend/components/__tests__/: ActivityLog.test.tsx  CandidateTable.test.ts  ReasonsList.test.tsx  StructuredFields.test.tsx
frontend/components/ui/: alert.tsx  badge.tsx  button.tsx  input.tsx  select.tsx  tabs.tsx
frontend/hooks/: useAdmin.ts  useAuditLogs.ts  useAuth.ts  useCandidateActivity.ts  useCandidateDetail.ts  useCandidates.ts  useDashboardStats.ts  useDedupMatches.ts  useEmailConfigs.ts  useInterviewQuestions.ts  useJobs.ts  useOverrideCandidate.ts  usePipelineSSE.ts  useReasons.ts  useResumeBank.ts  useResumeUrl.ts  useSubmitFeedback.ts  useTeams.ts  useUploads.ts
frontend/lib/: candidatesUrlSync.ts  savedViews.ts  utils.ts
frontend/lib/__tests__/: candidatesUrlSync.test.ts  savedViews.test.ts  utils.test.ts
frontend/lib/api/: admin.ts  auditLogs.ts  (+15 more)
frontend/stores/: authStore.ts
mineru-service/: Dockerfile  server.py
nginx/: nginx.conf
(+59 files in other folders)
