[project]
name = "autohr-backend"
version = "0.1.0"
description = "AutoHR backend — smart resume screening"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    # Settings / Validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.27",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "greenlet>=3.0.3",
    # Cache / Queue
    "redis>=5.0.1",
    "celery[redis]>=5.3.6",
    "flower>=2.0.1",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.2",
    # Crypto
    "cryptography>=42.0.5",
    # Logging
    "structlog>=24.1.0",
    # Object storage (S3-compatible)
    "boto3>=1.34.34",
    # LLM SDKs
    "zhipuai>=2.0.1",
    "dashscope>=1.14.1",
    # Document parsing
    "pdfplumber>=0.10.3",
    "pypdf>=4.0.2",
    "python-docx>=1.1.0",
    "olefile>=0.47",
    # OCR (大依赖；按需启用)
    # "paddlepaddle>=2.6.1",
    # "paddleocr>=2.7.0",
    "Pillow>=10.2.0",
    # MIME sniffing
    "python-magic>=0.4.27",
    # Email
    "imap-tools>=1.7.0",
    # Export
    "openpyxl>=3.1.2",
    # HTTP client
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "testcontainers[postgres,redis]>=4.0.0",
    "respx>=0.20.2",
    "ruff>=0.2.2",
    "mypy>=1.8.0",
    # Test fixtures: PDF generation
    "fpdf2>=2.8.0",
]
ocr = [
    "paddlepaddle>=2.6.1",
    "paddleocr>=2.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"alembic/versions/*" = ["E", "F", "W", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
