[project]
name = "autohr-backend"
version = "0.1.0"
description = "AutoHR backend — smart resume screening"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    # Settings / Validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.27",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "greenlet>=3.0.3",
    # Cache / Queue
    "redis>=5.0.1",
    "celery[redis]>=5.3.6",
    "flower>=2.0.1",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.2",
    # Crypto
    "cryptography>=42.0.5",
    # Logging
    "structlog>=24.1.0",
    # Object storage (S3-compatible)
    "boto3>=1.34.34",
    # LLM SDKs
    "zhipuai>=2.0.1",
    "dashscope>=1.14.1",
    # Document parsing
    "pdfplumber>=0.10.3",
    "pypdf>=4.0.2",
    "python-docx>=1.1.0",
    "olefile>=0.47",
    # OCR (大依赖；按需启用)
    # "paddlepaddle>=2.6.1",
    # "paddleocr>=2.7.0",
    "Pillow>=10.2.0",
    # MIME sniffing
    "python-magic>=0.4.27",
    # Email
    "imap-tools>=1.7.0",
    # Export
    "openpyxl>=3.1.2",
    # HTTP client
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "testcontainers[postgres,redis]>=4.0.0",
    "respx>=0.20.2",
    "ruff>=0.2.2",
    "mypy>=1.8.0",
    # Test fixtures: PDF generation
    "fpdf2>=2.8.0",
]
ocr = [
    "paddlepaddle>=2.6.1",
    "paddleocr>=2.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
# RUF001/002/003：中文标点 / 全角字符识别（项目大量使用中文，误报噪声）
# RUF022：__all__ 排序（无功能性影响）
# RUF100：未使用的 noqa（与 ignore 配合时易误报）
# RUF059：未使用的 unpacked 变量（测试 fixture 解构常见）
# B008：函数默认值调用（FastAPI Depends 必备模式）
# N818：异常类后缀（与项目命名约定冲突）
# UP017：UTC 时区字面量（不影响功能）
ignore = [
    "E501",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF022",
    "RUF100",
    "RUF059",
    "B008",
    "N818",
    "UP017",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"alembic/versions/*" = ["E", "F", "W", "I", "B", "UP", "N"]
"tests/**/*.py" = ["F401", "F841"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
